# faststar

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json  settings.local.json
core-toolkit/: AGENTS.md  README.md  pyproject.toml
core-toolkit/src/core_toolkit/: __init__.py  health.py  metrics.py
core-toolkit/src/core_toolkit/middleware/: __init__.py  access_log.py  cache_control.py  coep.py  coop.py  corp.py  csp.py  dns_prefetch_control.py  frame_guard.py  host_validation.py  hsts.py  json_content_type.py  no_sniff.py  origin_validation.py  permissions_policy.py  referrer_policy.py  robots_tag.py  security_headers.py  server_header_strip.py  sse_buffering.py  transport_security.py  xss_protection.py
core-toolkit/tests/: test_access_log.py  test_app_meter.py  test_cache_control.py  test_coep.py  test_coop.py  test_corp.py  test_csp.py  test_dns_prefetch_control.py  test_frame_guard.py  test_health.py  test_host_validation.py  test_hsts.py  test_json_content_type.py  test_metrics.py  test_no_sniff.py  test_origin_validation.py  test_permissions_policy.py  test_referrer_policy.py  test_robots_tag.py  test_security_headers.py  test_server_header_strip.py  test_sse_buffering.py  test_transport_security.py  test_xss_protection.py
fastapi-toolkit/: AGENTS.md  README.md  pyproject.toml
fastapi-toolkit/examples/api-a/: pyproject.toml
fastapi-toolkit/examples/api-a/src/api_a/: __init__.py  app.py
fastapi-toolkit/examples/api-a/tests/: test_hello.py
fastapi-toolkit/examples/api-b/: pyproject.toml
fastapi-toolkit/examples/api-b/src/api_b/: __init__.py  app.py
fastapi-toolkit/examples/api-b/tests/: test_hello.py
fastapi-toolkit/examples/api-c/: pyproject.toml
fastapi-toolkit/examples/api-c/src/api_c/: __init__.py  app.py
fastapi-toolkit/examples/api-c/tests/: test_hello.py
fastapi-toolkit/examples/bff/: .env.example  pyproject.toml
fastapi-toolkit/examples/bff/src/bff/: __init__.py  app.py  auth.py  config.py  token_cache.py
fastapi-toolkit/examples/bff/tests/: conftest.py  test_auth.py  test_hello.py
fastapi-toolkit/src/fastapi_toolkit/: __init__.py  lifespan.py  logging.py  middleware.py
fastapi-toolkit/tests/: test_logging.py  test_middleware.py
fastmcp-toolkit/: .editorconfig  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
fastmcp-toolkit/examples/: simple_server.py
fastmcp-toolkit/src/fastmcp_toolkit/: __init__.py  cors.py  decorator.py  health.py  logging.py  metrics.py  server.py  telemetry.py  util.py
fastmcp-toolkit/src/fastmcp_toolkit/config/: application_config.py  config_loader.py
fastmcp-toolkit/src/fastmcp_toolkit/middleware/: __init__.py  exception_handler.py  log_context.py  timer_test.py  tool_metrics.py  tool_visibility.py
fastmcp-toolkit/tests/: conftest.py  test_app_meter.py  test_application_config_provider.py  test_cors.py  test_env_var_application_config.py  test_health.py  test_log_format.py  test_logging.py  test_metrics.py  test_middleware_access_log.py  test_middleware_error_logger.py  test_middleware_log_context.py  test_middleware_timer_test.py  test_middleware_tool_metrics.py  test_middleware_tool_visibility.py  test_util.py
