[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core-toolkit"
version = "0.1.0"
description = "Starlette/ASGI共通ミドルウェアライブラリ"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "starlette>=0.48",
]

[tool.hatch.build.targets.wheel]
packages = ["src/core_toolkit"]

[tool.ruff]
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
