[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-toolkit"
version = "0.1.0"
description = "FastAPIプロジェクト共通ライブラリ"
requires-python = ">=3.14"
dependencies = [
  "aiohttp>=3.14.1",
  "core-toolkit",
  "fastapi>=0.115",
  "structlog>=24.0",
]

[tool.uv.sources]
core-toolkit = { path = "../core-toolkit", editable = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
  "httpx>=0.28",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_toolkit"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
