[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-a"
version = "0.1.0"
description = "API-A サービス"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "fastapi-toolkit",
]

[tool.uv.sources]
fastapi-toolkit = { path = "../../", editable = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
  "httpx>=0.28",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api_a"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
